# demarc

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml
src/demarc/: record.py
src/demarc/data/: field_names.json  field_specs.json  fixed_widths.json  non_fixed_widths.json
